# FlyCV

benchmark/: CMakeLists.txt
benchmark/cpp/modules/core/: mat_bench.cpp
benchmark/cpp/modules/fusion_api/: bgr_to_rgba_with_mask.cpp  bgra_to_resize_to_bgr.cpp  normallze_to_submean_to_reorder.cpp  nv12_to_resize_to_bgr_bench.cpp  nv21_to_resize_to_bgr_bench.cpp  split_to_memcpy_bench.cpp
benchmark/cpp/modules/img_calculation/: box_points_bench.cpp  connected_components_bench.cpp  find_homography_bench.cpp  matrix_mul_bench.cpp  mean_bench.cpp  min_area_rect_bench.cpp  min_max_loc_bench.cpp  norm_bench.cpp
benchmark/cpp/modules/img_draw/: circle_bench.cpp  line_bench.cpp
benchmark/cpp/modules/img_transform/: add_weighted_bench.cpp  color_convert_bench.cpp  copy_make_border_bench.cpp  crop_bench.cpp  extract_channel_bench.cpp  flip_bench.cpp  remap_bench.cpp  resize_bench.cpp  rotation_bench.cpp  subtract_bench.cpp  warp_affine_bench.cpp  warp_perspective_bench.cpp
benchmark/cuda/modules/core/: mat_bench_cuda.cpp
benchmark/cuda/modules/fusion_api/: split_to_memcpy_bench_cuda.cpp
benchmark/cuda/modules/img_transform/: add_weighted_bench_cuda.cpp  color_convert_bench_cuda.cpp  copy_make_border_bench_cuda.cpp  crop_bench_cuda.cpp  extract_channel_bench_cuda.cpp  flip_bench_cuda.cpp  resize_bench_cuda.cpp  rotation_bench_cuda.cpp  subtract_bench_cuda.cpp
benchmark/modules/core/: cuda_mat_bench.cpp
benchmark/modules/fusion_api/: cuda_split_to_memcpy_bench.cpp  nv21_to_resize_to_bgr_bench.cpp
benchmark/modules/img_transform/: cuda_add_weighted_bench.cpp  cuda_color_convert_bench.cpp  cuda_copy_make_border_bench.cpp  cuda_crop_bench.cpp  cuda_extract_channel_bench.cpp  cuda_flip_bench.cpp  cuda_resize_bench.cpp  cuda_rotation_bench.cpp  cuda_subtract_bench.cpp  extract_channel_bench.cpp
cmake/: FCVFindDependencies.cmake  FCVModuleCollect.cmake  FCVPrintConf.cmake  FCVUtils.cmake
cmake/platform/linux/: linux.cmake
include/: flycv.h.in
modules/: CMakeLists.txt
modules/core/allocator/include/: cpu_allocator.h  cuda_allocator.h
modules/core/allocator/interface/: base_allocator.h
modules/core/allocator/src/: allocator_cuda.cpp  base_allocator.cpp
modules/core/base/interface/: basic_types.h  cuda_types.h  log.h
modules/core/base/src/: cuda_types.cu  type_info.cpp
modules/core/basic_math/interface/: basic_math_cuda.h
modules/core/mat/interface/: cuda_mat.h  mat.h
modules/core/mat/src/: cuda_mat.cu  cuda_mat_convert_to.cu  cuda_mat_copy.cu  cuda_mat_dot.cu  cuda_mat_invert.cu
modules/js/: utils.js
samples/armlinux/: CMakeLists.txt
scripts/linux/: build.sh  build_linux.sh
tests/: CMakeLists.txt
tests/modules/fusion_api/: cuda_split_to_memcpy_test.cpp
tests/modules/img_transform/: cuda_add_weighted_test.cpp  cuda_copy_make_border_test.cpp  cuda_extract_channel_test.cpp  cuda_resize_test.cpp  cuda_rotation_test.cpp  cuda_subtract_test.cpp  extract_channel_test.cpp
tests/utils/: test_util.cpp  test_util.h
tools/add_module/: add_module.py  module_gtest.cpp.template
(+75 files in other folders)
